--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "dndbot-back",
   "version": "1.0.0",
   "main": "index.js",
+  "engines": {
+    "node": "17.8.0",
+    "npm": "8.5.5"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
